country comparison: adding notes ont code

--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -129,6 +129,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45283427",
+   "metadata": {},
+   "source": [
+    "- GHI: Benin shows the highest median values, while Togo has the lowest. The spread indicates - significant variability in GHI, particularly in Togo.\n",
+    "- DNI: Again, Benin leads in median DNI values, suggesting optimal conditions for direct solar energy. Togo shows a wider interquartile range, indicating less consistency.\n",
+    "- DHI: The boxplots demonstrate that Senegal has a notably higher median DHI compared to the other countries, implying more diffuse radiation, possibly due to atmospheric conditions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "ded39710",
@@ -176,11 +186,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "38539a3b",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "- Benin has the highest average GHI at 236.23 W/m², indicating strong solar energy potential.\n",
+    "- Togo follows closely with an average GHI of 225.08 W/m², suggesting favorable conditions for solar energy generation as well.\n",
+    "- Sierra Leone shows the lowest average GHI at 187.21 W/m², which may reflect less optimal solar conditions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "420de993",
+   "metadata": {},
    "source": []
   }
  ],
